@@ -1,5 +1,5 @@
 Shishi THANKS -- Acknowledgements.
-Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007 Simon Josefsson
+Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008 Simon Josefsson
 See the end for copying conditions.
 
 Shishi uses Libtasn1 by Fabio Fiorina, Libgcrypt and Libgpg-error by
@@ -23,6 +23,7 @@ Russ Allbery
 Abhijit Mitra
 Alberto Fondi
 Jack Bates
+Graham Shaw
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
