@@ -544,7 +544,8 @@ Shishi_krb_error;
 
 typedef enum
 {
-  SHISHI_TKTSHINTFLAGS_ACCEPT_EXPIRED = 1
+  SHISHI_TKTSHINTFLAGS_ACCEPT_EXPIRED = 1,
+  SHISHI_TKTSHINTFLAGS_NON_INTERACTIVE = 2
 }
 Shishi_tkts_hintflags;
 
